--- a/ACL4SSR_Online_Mini.ini
+++ b/ACL4SSR_Online_Mini.ini
@@ -11,7 +11,7 @@
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🛑 全球拦截,https://github.com/sanjiu2024/2/blob/main/guanggao.list
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/sanjiu2024/2/refs/heads/main/BanAD.list
 ruleset=🛑 全球拦截,https://github.com/sanjiu2024/2/blob/main/BanProgramAD.list
 ruleset=🛑 全球拦截,https://github.com/sanjiu2024/2/blob/main/Clash/Providers/BanEasyList.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
